--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- font aswam -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- gogle font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,18 +21,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-        <!-- tailwind custom color -->
-        <script>
-            tailwind.config = {
-              theme: {
+    <!-- tailwind custom color -->
+    <script>
+        tailwind.config = {
+            theme: {
                 extend: {
-                  colors: {
-                    clifford: '#da373d',
-                  }
+                    colors: {
+                        clifford: '#da373d',
+                    }
                 }
-              }
             }
-          </script>
+        }
+    </script>
 
     <style>
         .font-manrope {
@@ -41,33 +43,86 @@
 </head>
 
 <body class="font-manrope">
-<header class="container mx-auto">
+    <header class="container mx-auto">
 
-    <div class="hero">
-        <div class="hero-content flex-col lg:flex-row">
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row">
 
-          <div>
-            <h1 class="text-7xl font-extrabold">It's good <br>tea time at The
-                <br> Tea House</h1>
-            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-            <button class="btn btn-primary">Explore More</button>
-          </div>
-
-         <div>
-            <img src="./images/banner.png" class="max-w-sm  " />
-
-            <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-md">
-                <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                 <div>
-                    <h3>5.00</h3>
-                    <p>Trust Pilot Ratings</p>
+                    <h1 class="text-5xl lg:text-7xl font-extrabold">It's good <br>tea time at The
+                        <br> Tea House
+                    </h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn btn-primary">Explore More</button>
+                </div>
+
+                <div>
+                    <img src="./images/banner.png" class="max-w-sm  " />
+
+                    <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-md">
+                        <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+                        <div>
+                            <h3>5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-         </div>
         </div>
-      </div>
+    </header>
 
-</header>
+    <main class="container mx-auto">
+
+        <section class="text-center my-24 ">
+
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
+
+            <!-- card container -->
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+
+                <!-- 1st card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- 2nd card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- 3rd card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- 4th card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+
+    </main>
 
 </body>
 
