--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -45,20 +46,20 @@
 <body class="font-manrope">
     <header class="container mx-auto">
 
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="">
+            <div class="flex justify-between flex-col lg:flex-row ">
 
-                <div>
-                    <h1 class="text-5xl lg:text-7xl font-extrabold">It's good <br>tea time at The
+                <div class="lg:my-32 p-6 my-6">
+                    <h1 class="text-5xl  lg:text-7xl font-extrabold">It's good <br>tea time at The
                         <br> Tea House
                     </h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end border-0 text-white btn-primary">Explore More</button>
                 </div>
 
-                <div>
-                    <img src="./images/banner.png" class="max-w-sm  " />
+                <div class="p-6">
+                    <img src="./images/banner.png" class="  " />
 
                     <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-md">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
@@ -83,7 +84,7 @@
                 even slightly believable. </p>
 
             <!-- card container -->
-            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="grid gap-6  grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
 
                 <!-- 1st card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
@@ -142,7 +143,7 @@
 
             </div>
 
-            <div class="space-y-5 flex-1">
+            <div class="space-y-5 p-10 flex-1">
 
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
                 <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
@@ -162,7 +163,7 @@
         <!-- Meet Our Super Clients -->
 
         <section
-            class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24  ">
+            class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24  ">
 
             <div class=" flex lg:pr-28 items-center text-white">
                 <div class="space-y-5">
@@ -172,7 +173,7 @@
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour, or randomised words which don't look even slightly
                         believable. </p>
-                    <button class="btn btn-primary">Show All</button>
+                    <button class="btn btn-primary ">Show All</button>
                 </div>
             </div>
 
@@ -282,7 +283,55 @@
 
     </main>
 
+    <footer class="py-4 lg:px-48 p-4 py-10 bg-base-200 text-base-content" >
+<div class="flex justify-between space-x-4 my-24">
+    <img src="./images/cup.png" alt="">
+    <p class="space-y-1 lg:space-x-4">
+        <span class="">Ready to get strated?</span>
+        <button class="btn btn-primary bg-gradient-to-r from-gradient-start to-gradient-end border-0 text-white space-y-3">Get Started</button>
+    </p>
+    
+</div>
 
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header> 
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+              </nav> 
+              <nav>
+                <header class="footer-title">Company</header> 
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+              </nav> 
+              <nav>
+                <header class="footer-title">Legal</header> 
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+              </nav> 
+              <form>
+                <header class="footer-title">Newsletter</header> 
+                <fieldset class="form-control w-80">
+                  <label class="label">
+                    <span class="label-text">Enter your email address</span>
+                  </label> 
+                  <div class="join">
+                    <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end border-0 btn-primary rounded-full"><i class="fa-solid fa-arrow-right text-white "></i></button>
+                  </div>
+                </fieldset>
+              </form>
+        </div>
+        <div class="divider "></div>
+        <aside class="mt-10 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+          </aside>
+      </footer>
 </body>
 
 </html>
